# fin

./: README.md  package.json  pnpm-lock.yaml
core/: package.json  pnpm-lock.yaml
core-plugins/core-plugin-calculator/: Cargo.toml
core-plugins/core-plugin-calculator/src/: lib.rs  token.rs
core-plugins/core-plugin-calculator/src/token/: operand.rs  operator.rs
core-plugins/core-plugin-fs/: Cargo.toml
core-plugins/core-plugin-fs/src/: cache.rs  db.rs  lib.rs
core-plugins/core-plugin-fs/src/db/: fs.rs
core/src/: App.tsx  main.tsx
core/src-tauri/: .env  Cargo.toml
core/src-tauri/assets/: default-config.toml
core/src-tauri/capabilities/: default.json  desktop.json
core/src-tauri/icons/: icon.icns
core/src-tauri/migrations/: 0001_filesystem.down.sql
core/src-tauri/src/: cache.rs  calculator.rs  config.rs  db.rs  lib.rs
core/src-tauri/src/db/: fs.rs
core/src/components/common/: Icon.tsx
core/src/pages/: Search.tsx  Settings.tsx
core/src/store/: app.ts  search.ts  settings.ts
plugin-api/: Cargo.toml
plugin-api/src/: lib.rs
src/: App.css  App.tsx  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_filesystem.down.sql  0001_filesystem.up.sql  0001_filesystem_table.sql
src-tauri/src/: cache.rs  calculator.rs  config.rs  db.rs  keymaps.rs  lib.rs  main.rs
src-tauri/src/config/: keymaps.rs
src-tauri/src/db/: cache.rs
