[package]
name = "fin"
version = "0.0.1"
description = "A Tauri App"
authors = ["Athul Anoop"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fin_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
dotenvy = "0.15.7"
directories = "5.0.1"
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio", "tls-native-tls", "macros"] }
toml = "0.8.9"
regex = "1.9.6"
num-traits = "0.2.9"
libc = "0.2.9"
libloading = "0.8.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc.1"

