[package]
name = "fin"
version = "0.0.1"
description = "A Tauri App"
authors = ["Athul Anoop"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fin_lib"
crate-type = ["rlib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5.0.1"
toml = "0.8.9"
libc = "0.2.9"
libloading = "0.8.5"
plugin-api = {path = "../../plugin-api/"}
core-plugin-calculator = {path = "../../core-plugins/core-plugin-calculator/"}
core-plugin-fs = {path = "../../core-plugins/core-plugin-fs/"}

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.0"

